# online-computer-shop

./: .gitignore  pyproject.toml
app/config/: settings.py
